# sql-gen

./: .gitignore  .gitmodules  :wall  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  test.yml
migrations/: 20230710043905_categories.sql  20230710043905_products.sql
setup_db_macros/: Cargo.toml
setup_db_macros/src/: lib.rs
src/: db_queries.rs  generate.rs  main.rs  migrate.rs  models.rs  query_generate.rs  tests.rs  utils.rs
src-old/: generate.rs  main.rs  models.rs  query_generate.rs  utils.rs
src/core/: mod.rs  models.rs
src/core/intepreters/: get_file_structs.rs  get_file_structs_test.rs  mod.rs
src/core/models/: db.rs  mod.rs  rust.rs
src/core/translators/: convert_column_to_field.rs  convert_db_enum_to_rust_enum.rs  convert_db_enum_to_rust_enum_test.rs  convert_table_to_struct.rs  convert_table_to_struct_test.rs  mod.rs  models.rs
src/core/writers/: enum_writer.rs  enum_writer_test.rs  fs_writer.rs  fs_writer_tests.rs  helpers.rs  mod.rs  struct_writer.rs  struct_writer_test.rs  test_helpers.rs
src/db/: categories.rs  categories_db_set.rs  mod.rs  products.rs  products_db_set.rs
src/mysql/: mod.rs  test_helper.rs
src/mysql/models/: mod.rs  mysql_enum.rs  mysql_table_column.rs
src/mysql/queries/: convert_type.rs  get_enums.rs  get_enums_test.rs  get_tables.rs  get_tables_test.rs  mod.rs
src/postgres/: mod.rs  test_helper.rs
src/postgres/models/: mod.rs  postgres_enum.rs  postgres_table_column.rs
src/postgres/queries/: convert_type.rs  get_enums.rs  get_enums_test.rs  get_tables.rs  get_tables_test.rs  mod.rs  test_get_enums.rs  test_get_tables.rs  test_helper.rs
