[package]
name = "sql-gen"
version = "0.1.5"
edition = "2021"
description = "A CLI tool for generating models based on a SQL Database using SQLx"
license = "MIT"

[dependencies]
sqlx = { version = "0.7", features = ["postgres","runtime-tokio"] }
sqlx-cli = "0.7"
clap = "3.0"
regex = "1.5"
chrono = "0.4"
# regex = "1.5"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
testcontainers = { version ="0.15.0" }
testcontainers-modules = { version = "0.3.5", features = ["postgres"] }
ctor = "0.3.6"
pretty_assertions = "1.4.1"
syn = { version="2.0.98", features=["full"] }
convert_case = "0.8.0"
pluralizer = "0.5.0"
